--- a/Probability and Stochastics/Probability and Stochastics.tex
+++ b/Probability and Stochastics/Probability and Stochastics.tex
@@ -4293,6 +4293,13 @@ $N_x$ 可以解释为状态经过点 $x$ 的次数。
   不难验证互通是一个等价关系。
 \end{remark}
 
+我们记所有常返点的集合为 $R$。
+
+\begin{lemma}
+  假设 $x\in R$ 且 $y\in E \smallsetminus\{x\}$ 使得 $U(x,y)>0 \ (x\to y)$，
+  那么 $y\in R$ 且 $\matup P_y(H_x<\infty)=1$，因此 $U(y,x)>0\ (y\to x)$。
+\end{lemma}
+
 
 
 
