--- a/Smooth Manifolds/Smooth Manifolds.tex
+++ b/Smooth Manifolds/Smooth Manifolds.tex
@@ -2841,7 +2841,7 @@ $F_*X$。
 使得其在每个点的速度向量等于给定的切向量。
 
 如果 $V$ 是 $M$ 上的向量场，定义\emph{$V$ 的积分曲线}为
-可微曲线 $\gamma:J\to M$，其在每个点处的速度等于 $V$ 在该店处的值：
+可微曲线 $\gamma:J\to M$，其在每个点处的速度等于 $V$ 在该点处的值：
 \[
   \gamma'(t)=V_{\gamma(t)}\quad \forall t\in J.  
 \]
