--- a/Smooth Manifolds/Smooth Manifolds.tex
+++ b/Smooth Manifolds/Smooth Manifolds.tex
@@ -3503,7 +3503,7 @@ $\omega=\omega_i\lambda^i$，其中 $\omega_i:U\to \mathbb{R}$
   \]
 \end{example}
 
-尽管光滑函数的偏导数不能以与坐标无关的方式解释为向量场的分量，但是可以
+这表明光滑函数的偏导数不能以与坐标无关的方式解释为向量场的分量，但是可以
 证明它们可以解释为余向量场的分量，这是余向量场最重要的应用。
 
 令 $f$ 是光滑流形 $M$ 上的实值函数。我们定义余向量场 $df$ 为
